--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,10 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+*.tar.gz
+
+# bin file directory
+dist/
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
